tests/baselines/reference/destructureCatchClause(strict=false,useunknownincatchvariables=false).errors.txt
destructureCatchClause.ts(26,17): error TS2339: Property 'x' does not exist on type '{}'.
destructureCatchClause.ts(27,15): error TS2461: Type 'unknown' is not an array type.
destructureCatchClause.ts(29,17): error TS2339: Property 'a' does not exist on type '{}'.
destructureCatchClause.ts(30,17): error TS2339: Property 'a' does not exist on type '{}'.
destructureCatchClause.ts(32,15): error TS2461: Type 'unknown' is not an array type.
destructureCatchClause.ts(33,15): error TS2461: Type 'unknown' is not an array type.
destructureCatchClause.ts(35,17): error TS2339: Property 'a' does not exist on type '{}'.


==== destructureCatchClause.ts (7 errors) ====
    // These are okay with useUnknownInCatchVariables=false, but not okay with useUnknownInCatchVariables=true.
    try {} catch ({ x }) { x }
    try {} catch ([ x ]) { x }
    
    try {} catch ({ a: { x } }) { x }
    try {} catch ({ a: [ x ] }) { x }
    
    try {} catch ([{ x }]) { x }
    try {} catch ([[ x ]]) { x }
    
    try {} catch ({ a: { b: { c: { x }} }}) { x }
    
    
    try {} catch ({ x }: any) { x }
    try {} catch ([ x ]: any) { x }
    
    try {} catch ({ a: { x } }: any) { x }
    try {} catch ({ a: [ x ] }: any) { x }
    
    try {} catch ([{ x }]: any) { x }
    try {} catch ([[ x ]]: any) { x }
    
    try {} catch ({ a: { b: { c: { x }} }}: any) { x }
    
    
    try {} catch ({ x }: unknown) { x }
                    ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
    try {} catch ([ x ]: unknown) { x }
                  ~~~~~
!!! error TS2461: Type 'unknown' is not an array type.
    
    try {} catch ({ a: { x } }: unknown) { x }
                    ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    try {} catch ({ a: [ x ] }: unknown) { x }
                    ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    
    try {} catch ([{ x }]: unknown) { x }
                  ~~~~~~~
!!! error TS2461: Type 'unknown' is not an array type.
    try {} catch ([[ x ]]: unknown) { x }
                  ~~~~~~~
!!! error TS2461: Type 'unknown' is not an array type.
    
    try {} catch ({ a: { b: { c: { x }} }}: unknown) { x }
                    ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    